# logParser

./: main.py  pyproject.toml
lib/logparser/: __init__.py  objectifier.py  reader.py  tokenizer.py
tests/: test_logparser.py
