[tool.poetry]
name = "logparser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
flake8 = "^3.8.3"
pytest = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

